--- a/MeteoApp/MeteoApp/Components/App.razor
+++ b/MeteoApp/MeteoApp/Components/App.razor
@@ -1,6 +1,7 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
 
+
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -9,12 +10,17 @@
     <link rel="stylesheet" href="app.css" />
     <link rel="stylesheet" href="MeteoApp.styles.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
+    <RadzenTheme Theme="material" @rendermode="InteractiveServer" />
     <HeadOutlet />
 </head>
 
 <body>
     <Routes />
     <script src="_framework/blazor.web.js"></script>
+    <script src="/js/Slider.js"></script>
+    <script src="/js/Effect.js"></script>
+    <script src="_content/Radzen.Blazor/Radzen.Blazor.js?v=@(typeof(Radzen.Colors).Assembly.GetName().Version)"></script>
+    <script src="_framework/blazor.server.js"></script>
 </body>
 
 </html>
