--- a/MeteoApp/MeteoApp/Components/Layout/NavMenu.razor
+++ b/MeteoApp/MeteoApp/Components/Layout/NavMenu.razor
@@ -25,6 +25,12 @@
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Weather
             </NavLink>
         </div>
+
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="analytics">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Analytics
+            </NavLink>
+        </div>
     </nav>
 </div>
 
