--- a/MeteoApp/MeteoApp/Components/Pages/Analytics.razor
+++ b/MeteoApp/MeteoApp/Components/Pages/Analytics.razor
@@ -1,46 +1,56 @@
 ﻿@page "/analytics"
 @rendermode InteractiveServer
-<h3>Analytics</h3>
-<RadzenStack class="rz-p-0 rz-p-md-6 rz-p-lg-12" AlignItems="AlignItems.Center">
-<RadzenStack Style="width: 100%; max-width: 600px; height:300px">
-    <RadzenChart Visible="true">
-        <RadzenPieSeries Data="@revenue" Title="Revenue" CategoryProperty="Quarter" ValueProperty="Revenue">
-            <RadzenSeriesDataLabels Visible="true" />
-        </RadzenPieSeries>
-    </RadzenChart>
+@using ViewModels
+@inject AnalyticsViewModel AnalitycsViewModel
+<h3>City Analysis</h3>
+<RadzenStack class="rz-p-0 rz-p-md-6 rz-p-lg-12" AlignItems="AlignItems.Center" Orientation="Orientation.Vertical" Style="width:100%">
+    <RadzenStack Orientation="Orientation.Horizontal">
+    <RadzenCard>
+        <h4>Population of cities in (M)</h4>
+            <RadzenChart Visible="true" Style="width:500px">
+				<RadzenPieSeries Data="@AnalitycsViewModel.CityPopulationDataItem" Title="Population" CategoryProperty="CityName" ValueProperty="PupulationInMillions">
+					<RadzenSeriesDataLabels Visible="true" />
+				</RadzenPieSeries>
+			</RadzenChart>
+    </RadzenCard>
+    <RadzenCard>
+            <h4>Foreign Visitors of cities in (M)</h4>
+            <RadzenChart Style="width:500px">
+                <RadzenColumnSeries Data="@AnalitycsViewModel.CityPopulationDataItem" CategoryProperty="CityName" Title="Cities" ValueProperty="CityBeautyPercentage">
+                </RadzenColumnSeries>
+                <RadzenColumnOptions Radius="5" />
+                <RadzenValueAxis Step="20" Min="0" Max="100">
+                    <RadzenGridLines Visible="true" />
+                    <RadzenAxisTitle Text="Percentage of beauty" />
+                </RadzenValueAxis>
+            </RadzenChart>
+            
+    </RadzenCard>
+    </RadzenStack>
+    <RadzenCard>
+        <h4>Foreign Visitors of cities in (M)</h4>
+        <RadzenChart Style="width:100%">
+            <RadzenColumnSeries Data="@AnalitycsViewModel.CityPopulationDataItem" CategoryProperty="CityName" Title="Cities" ValueProperty="CityBeautyPercentage">
+            </RadzenColumnSeries>
+            <RadzenColumnOptions Radius="5" />
+            <RadzenValueAxis Step="20" Min="0" Max="100">
+                <RadzenGridLines Visible="true" />
+                <RadzenAxisTitle Text="Percentage of beauty" />
+            </RadzenValueAxis>
+        </RadzenChart>
+
+    </RadzenCard>
 </RadzenStack>
-</RadzenStack>
+
 
 @code {
 
-    bool showDataLabels = false;
+    protected override void OnAfterRender(bool firstRender)
+	{
+        if (firstRender){
+			AnalitycsViewModel.LoadData();
+		}
 
-    class DataItem
-    {
-        public string Quarter { get; set; }
-        public double Revenue { get; set; }
-    }
-
-    DataItem[] revenue = new DataItem[] {
-        new DataItem
-        {
-            Quarter = "Q1",
-            Revenue = 30000
-        },
-        new DataItem
-        {
-            Quarter = "Q2",
-            Revenue = 40000
-        },
-        new DataItem
-        {
-            Quarter = "Q3",
-            Revenue = 50000
-        },
-        new DataItem
-        {
-            Quarter = "Q4",
-            Revenue = 80000
-        },
-    };
+	}
+    
 }
