--- a/MeteoApp/MeteoApp/Components/Pages/Weather.razor
+++ b/MeteoApp/MeteoApp/Components/Pages/Weather.razor
@@ -8,7 +8,7 @@
 <link rel="stylesheet" href="css/weather.css">
 <PageTitle>Weather</PageTitle>
 
-<div id="weather-container">
+<div id="weather-container" class="weather-container">
 
     <h1>Weather</h1>
 
