--- a/MeteoApp/MeteoApp/wwwroot/css/weather.css
+++ b/MeteoApp/MeteoApp/wwwroot/css/weather.css
@@ -23,3 +23,7 @@ html, body {
 .weather-container {
     height: 100%;
 }
+
+.rz-grid-table rz-grid-table-fixed rz-grid-table-striped{
+        background-color: rgba(255, 23, 255, 0.8);
+}
