Added checklist page

--- a/MeteoApp/MeteoApp/Components/Layout/NavMenu.razor
+++ b/MeteoApp/MeteoApp/Components/Layout/NavMenu.razor
@@ -27,8 +27,8 @@
         </div>
 
         <div class="nav-item px-3">
-            <a class="nav-link" href="/counter">
-                <RadzenIcon Icon="circle" Size="24px" Class="nav-icon" /> Counter
+            <a class="nav-link" href="/checklist">
+                <RadzenIcon Icon="circle" Size="24px" Class="nav-icon" /> Checklist 
             </a>
         </div>
     </nav>
